# cvdm

./: .gitignore  Dockerfile  LICENSE  README.md  eval.py  mypy.ini  pyproject.toml  requirements.txt  setup.py  setup_env.sh  staining_dataset_test.py  train.py
.github/workflows/: python-publish.yml  test.yml
architectures/: ddpm_blocks.py  model.py
benchmarks/: staining_dataset.py
configs/: biosr.yaml  biosr_phase.yaml  hcoco_phase.yaml  hcoco_phase_eval.yaml  imagenet_phase.yaml  imagenet_phase_sample.yaml  imagenet_sr.yaml  imagenet_sr_sample.yaml  staining.yaml
cvdm/architectures/: sr3.py  unet.py
cvdm/architectures/components/: attention_block.py  conditional_instance_normalization.py  deep_residual_block.py  residual_block.py
cvdm/configs/: data_config.py  eval_config.py  model_config.py  neptune_config.py  training_config.py  utils.py
cvdm/data/: biosr_dataloader.py  image_dir_dataloader.py  npy_dataloader.py  phase_2shot_dataloader.py  phase_polychrome_dataloader.py
cvdm/diffusion_models/: joint_model.py  mean_model.py  noise_model.py  time_model.py  variance_model.py
cvdm/utils/: data_utils.py  inference_utils.py  loss_utils.py  metrics_utils.py  phase_utils.py  training_utils.py
diffusion_losses/: losses.py
diffusion_models/: ddpm.py  ddpm_utils.py
scripts/: eval.py  get_test_data.py  train.py
tests/: test_imports.py
training_utils/: fit_cvdm.py  inf_cvdm.py
v_utils/: image_utils.py
