[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cvdm"
version = "0.1.0"
description = "Code for Conditional Variational Diffusion Models"
authors = [
    {name = "Gabriel Della Maggiora"},
    {name = "Luis Alberto Croquevielle"},
    {name = "Maria Wyrzykowska", email = "m.wyrzykowska@hzdr.de"},
    {name = "Nikita Deshpande"},
    {name = "Harry Horsley"},
    {name = "Thomas Heinis"},
    {name = "Artur Yakimovich"}
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
urls = {homepage = "https://github.com/casus/cvdm"}

dependencies = [
    "tensorflow==2.15.0",
    "keras==2.15.0",
    "matplotlib==3.8.0",
    "tqdm==4.65.0",
    "scikit-learn==1.4.2",
    "scikit-image==0.22.0",
    "einops==0.7.0",
    "neptune==1.10.2",
    "opencv-python==4.9.0.80",
    "tensorflow-addons==0.23.0",
    "cupy-cuda12x==13.3.0"
]

[tool.setuptools.packages.find]
where = ["cvdm"] 
include = ["*"] 